--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,66 @@
+---
+const meta = {
+	title: "Bris Hotel Perú | Hospedaje en Nasca cerca de las Líneas de Nasca",
+	keywords: "Bris Hotel Perú, hotel en Nasca, hospedaje en Nasca, alojamiento en Nasca, hoteles en Nasca cerca de las Líneas de Nasca, hotel céntrico en Nasca, reservar hotel en Nasca, mejor hotel en Nasca, turismo en Nasca, hotel económico en NascaBris Hotel Perú, hotel en Nasca, hospedaje en Nasca, alojamiento en Nasca, hoteles en Nasca cerca de las Líneas de Nasca, hotel céntrico en Nasca, reservar hotel en Nasca, mejor hotel en Nasca, turismo en Nasca, hotel económico en Nasca, hotel corporativo en Nasca, alojamiento ejecutivo en Nasca, hotel para viajeros de negocios en Nasca, hospedaje para empresas en Nasca, hotel con wifi en Nasca, hotel con sala de reuniones en Nasca",
+	description: "Bris Hotel Perú en Nasca ofrece alojamiento cómodo para turistas y viajeros de negocios. Ubicación estratégica, wifi y atención personalizada. Reserva tu habitación ahora.",
+	url: "https://brishotelperu.com/",
+	image: "https://brishotelperu.com/imagen_seo.avif"
+};
+const { url } = Astro;
+const isContactPage = url.pathname.includes("contacts");
+import "../../styles/global.css";
+import Navbar from '../components/Navbar.astro';
+---
 <!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="robots" content="index, follow" />
+		<meta name="author" content="Rubén Tipiani" />
+		<meta name="copyright" content="Copyright (c) 2025, Hotel Chaska Valle Green" />
+		<title>
+			{ meta.title }
+		</title>
+		<meta name="description" content={meta.description} />
+		<meta name="keywords" content={meta.keywords} />
+		
+		<!-- Open Graph / Facebook -->
+		<meta property="og:site_name" content="Hotel Chaska Valle Green" />
+		<meta property="og:title" content={meta.title} />
+		<meta property="og:description" content={meta.description} />
+		<meta property="og:image" content={meta.image} />
+		<meta property="og:url" content={meta.url} />
+		<meta property="og:type" content="website" />
+		<meta property="og:image:width" content="1200" />
+		<meta property="og:image:height" content="630" />
+		<meta property="og:image:type" content="image/avif" />
+
+		<!-- Twitter Card -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:title" content={meta.title} />
+		<meta property="twitter:description" content={meta.description} />
+		<meta property="twitter:image" content={meta.image} />
+		<meta property="twitter:site" content="@hotelchaskavallegreen" />
+		<meta name="google-site-verification" content="ziunduFaSq1K0stHJTa7Ttijv2kYTZztcz0wePK4YX8" />
+
+		<!-- Canonical URL -->
+		<link rel="canonical" href={meta.url} />
+
+		<!-- Favicon -->
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="manifest" href="/site.webmanifest">
+
+		<!-- Google reCAPTCHA -->
+		{isContactPage && <script src="https://www.google.com/recaptcha/api.js" async defer></script>}
 	</head>
 	<body>
+		<Navbar />
 		<slot />
+		<a href="https://wa.link/sp0l65" target="_blank" rel="noopener noreferrer" class="fixed bottom-6 right-6 z-30 w-16 h-16 bg-green-500 text-white rounded-full flex items-center justify-center shadow-xl hover:bg-green-600 transition duration-300 transform hover:scale-110" aria-label="Ir a Whatsapp">
+			<i class="fa-brands fa-whatsapp text-2xl"></i>
+		</a>
 	</body>
 </html>
-
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
