--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ import Navbar from '../components/Navbar.astro';
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="robots" content="index, follow" />
 		<meta name="author" content="Rubén Tipiani" />
-		<meta name="copyright" content="Copyright (c) 2025, Hotel Chaska Valle Green" />
+		<meta name="copyright" content="Copyright (c) 2025, Bris Hotel Perú" />
 		<title>
 			{ meta.title }
 		</title>
@@ -26,7 +26,7 @@ import Navbar from '../components/Navbar.astro';
 		<meta name="keywords" content={meta.keywords} />
 		
 		<!-- Open Graph / Facebook -->
-		<meta property="og:site_name" content="Hotel Chaska Valle Green" />
+		<meta property="og:site_name" content="Bris Hotel Perú" />
 		<meta property="og:title" content={meta.title} />
 		<meta property="og:description" content={meta.description} />
 		<meta property="og:image" content={meta.image} />
@@ -41,7 +41,7 @@ import Navbar from '../components/Navbar.astro';
 		<meta property="twitter:title" content={meta.title} />
 		<meta property="twitter:description" content={meta.description} />
 		<meta property="twitter:image" content={meta.image} />
-		<meta property="twitter:site" content="@hotelchaskavallegreen" />
+		<meta property="twitter:site" content="@brishotelperu" />
 		<meta name="google-site-verification" content="ziunduFaSq1K0stHJTa7Ttijv2kYTZztcz0wePK4YX8" />
 
 		<!-- Canonical URL -->
@@ -51,7 +51,7 @@ import Navbar from '../components/Navbar.astro';
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-		<link rel="manifest" href="/site.webmanifest">
+		<!-- <link rel="manifest" href="/site.webmanifest"> -->
 
 		<!-- Google reCAPTCHA -->
 		{isContactPage && <script src="https://www.google.com/recaptcha/api.js" async defer></script>}
