--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,21 @@
 @import "tailwindcss";
 @import '@fortawesome/fontawesome-free/css/all.min.css';
 @import 'photoswipe/photoswipe.css';
+
+@font-face {
+  font-family: 'Satisfy';
+  src: url('/fonts/Satisfy-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.slide-content {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.8s ease, transform 0.8s ease;
+}
+
+.slide-content.show {
+  opacity: 1;
+  transform: translateY(0);
+}
