--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,17 @@
 ---
 import Calificaciones from '../components/Calificaciones.astro';
+import Footer from '../components/Footer.astro';
 import Landings from '../components/Landings.astro';
 import Siguenos from '../components/Siguenos.astro';
 import Slider from '../components/Slider.astro';
+import SuscripcionNewlester from '../components/SuscripcionNewlester.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 <Layout>
     <Slider />
     <Landings />
-    <Siguenos />
     <Calificaciones />
+    <Siguenos />
+    <SuscripcionNewlester />
+    <Footer />
 </Layout>
