--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -58,6 +58,7 @@
     	<a href="#" class="text-gray-700 font-medium hover:text-[#5a3d37]">Inicio</a>
     	<a href="#" class="text-gray-700 font-medium hover:text-[#5a3d37]">Habitaciones</a>
     	<a href="#" class="text-gray-700 font-medium hover:text-[#5a3d37]">Servicios</a>
+		<a href="/galeria" class="text-gray-700 font-medium hover:text-[#5a3d37]">Galería</a>
     	<a href="#" class="text-gray-700 font-medium hover:text-[#5a3d37]">Ubicación</a>
     	<a href="#book" class="bg-[#5a3d37] text-white px-4 py-2 rounded text-center w-max hover:bg-[#4d322d] transition">Reservar Ahora</a>
   	</div>
