--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -55,7 +55,7 @@
       		</svg>
     	</button>
 
-    	<a href="#" class="text-gray-700 font-medium hover:text-[#5a3d37]">Inicio</a>
+    	<a href="/" class="text-gray-700 font-medium hover:text-[#5a3d37]">Inicio</a>
     	<a href="#" class="text-gray-700 font-medium hover:text-[#5a3d37]">Habitaciones</a>
     	<a href="#" class="text-gray-700 font-medium hover:text-[#5a3d37]">Servicios</a>
 		<a href="/galeria" class="text-gray-700 font-medium hover:text-[#5a3d37]">Galería</a>
